tests/NormalTests/paczka2/big_fuzzy/25722752.err
Error in line 11: Ju1 A567 2,5
Error in line 6: A567 A567 12,3
Error in line 17: VHY9NzNMtXu S697 32,7
Error in line 18: 61rrHWzvq A567 13,1
Error in line 25: 3v0 S697 46,2
Error in line 41: N91FM S697 10,5
Error in line 38: A567 S697 49,7
Error in line 49: 3v0 S270 84,4
Error in line 32: VHY9NzNMtXu S697 55,6
Error in line 66: A567 S270 66,8
Error in line 64: Ju1 A567 31,4
Error in line 84: 61rrHWzvq S697 7,1
Error in line 90: 3v0 S396 31:0
Error in line 96: VHY9NzNMtXu S270 62,6
Error in line 104: VHY9NzNMtXu S697 6,4
Error in line 110: VHY9NzNMtXu A567 2z2,z
Error in line 91: N91FM S697 96,3
Error in line 85: Ju1 S396 66,9
Error in line 107: uk9IYcH S396 92,1
Error in line 106: 3v0 S697 3,7
Error in line 121: 3v0 S270 85,2
Error in line 108: VHY9NzNMtXu A567 76,4
Error in line 122: 3v0 A567 94,6
Error in line 131: 3v0 S697 44,9
Error in line 128: N91FM S697 12,6
Error in line 130: VHY9NzNMtXu S396 41,3
Error in line 158: 3v& S27& 3&,5
Error in line 163: 3v0 S270 94,6
Error in line 166: 61rrHWzvq S697 40,7
Error in line 156: A567 S396 13,6
Error in line 180: 61rrHWzvq S270 51,8
Error in line 181: 61rrHWzvq S697 75,4
Error in line 184: N91FM S396 98,9
Error in line 190: A567 A567 7,1
Error in line 192: A567 S396 19,9
Error in line 205: Ju1 S270 47,1
Error in line 189: VHY9NzNMtXu S396 90,1
Error in line 210: VHY9NzNMtXu S697 28,3
Error in line 211: 61rrHWzvq S270 35,8
Error in line 225: VHY9NzNMtXu S697 19,3
Error in line 239: Ju1 S270 17,3
Error in line 237: VHY9NzNMtXu S396 29,7
